--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,98 +1,4 @@
-<!-- <h1>Hello World</h1>
-<button (click)="getNewUser()">GET NEW UER</button>
-<div  style="width: 100vw; height: 100vh;overflow: scroll; display: grid; 
-grid-template-columns: repeat(3, 370px); 
-grid-template-rows: repeat(3, 170px);margin-top: 50px;">
-<div  *ngFor="let item of previousJson" >
-    <h1>{{item.name}}</h1>
-    <h2>{{item.text}}</h2><br>
-  </div>
-</div> -->
-<div class="h-screen w-full flex flex-col lg:flex-row ">
-  <div  class="w-[497px] lg:h-screen flex flex-col justify-between  bg-white  px-[32px] pt-[60px] pb-[28px] shadow-[rgba(0,_0,_0,_0.4)_0px_30px_90px]" >
-      <div class="w-full" >
-          <img src="../assets/images/manipal.png" alt="">
-      </div>
-      <div class="">
-          <p class="text-[32px] text-teal-500 font-extrabold">Win<br>
-              exciting <br>
-              gift by tweeting <br>
-          </p>
-          <p class="text-[20px] font-bold text-blue-900">#ManipalHospitalMGRoad</p>
-      </div>
-      <div class="w-[234px] h-[106px] mx-auto">
-          <img class="w-full" src="../assets/images/lifes-on.png" alt="">
-      </div>
-  </div>
-  <div
-      class=" h-screen w-screen bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-[#D0828F] via-[#3561AE] to-[#3EBFBA] py-[67px] px-[37px]">
 
-      <!-- header -->
-      <div class="">
-          <div class="flex justify-between">
-              <h3 class="text-[50px] font-semibold text-white">Now Serving</h3>
-              <p class="text-[48px] font-semibold text-white">#ManipalHospitalMGRoad</p>
-          </div>
-      </div>
+<app-tweet></app-tweet>
 
-      <div class="w-full">
 
-          <!-- card 1 -->
-          <div class="w-[623px] h-[267px] shadow-2xl  rounded-2xl my-[30px] p-[30px]" [ngStyle]="{'background-color': user.bg}" >
-              <div className="w-full">
-                  <div class="flex flex-row justify-between">
-                      <div class="">
-                          <div class="flex flex-row gap-[11px]">
-                              <div class="w-[50px] h-[50px]">
-                                  <img class="rounded-full" src="../assets/images/twitter.jpg" alt="">
-                              </div>
-                              <div class="">
-                                  <p class="text-[15px] font-semibold">{{user.name}}</p>
-                                  <p class="text-[13px] text-zinc-500"></p>
-                              </div>
-                          </div>
-
-                      </div>
-                      <div class="w-[32px] h-[27px]">
-                          <img src="/img/twitter.svg" alt="">
-                      </div>
-                  </div>
-                  <div class="pt-[33px]">
-                      <p class="text-[21px] font-medium text-zinc-700">{{user.text}}</p>
-                  </div>
-              </div>
-          </div>
-
-          <!-- card 2 -->
-          <div class="w-full h-[55vh] grid grid-cols-3  overflow-scroll scroll-smooth " id="main">
-              <!-- card2 -->
-              <div class="w-[425px] h-fit rounded-xl  my-[16px] p-[16px] bg-white" *ngFor="let item of previousJson" [ngStyle]="{'background-color': item.bg}" >
-                  <div class="flex flex-row justify-between">
-                      <div class="">
-                          <div class="flex flex-row gap-[11px]">
-                              <div class="w-[50px] h-[47px]">
-                                  <img class="rounded-full" src="../assets/images/twitter.jpg" alt="">
-                              </div>
-                              <div class="">
-                                  <p class="text-[15px] font-semibold">{{item.name}}</p>
-                                  <p class="text-[13px] text-zinc-500">{{item.text}}</p>
-                              </div>
-                          </div>
-
-                      </div>
-                      <div class="w-[24px] h-[19px]">
-                          <img class="w-full" src="/img/twitter.svg" alt="">
-                      </div>
-                  </div>
-                  <div class="pt-[23px]">
-                      <p class="text-[18px] font-medium text-zinc-700">{{user.text}}</p>
-                  </div>
-
-              </div>
-          </div>
-      </div>
-      <!-- card -->
-
-  </div>
-</div>
-<router-outlet></router-outlet>
