--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
     <h2>{{item.text}}</h2><br>
   </div>
 </div> -->
-<div class="h-screen w-full flex flex-col lg:flex-row ">
+<!-- <div class="h-screen w-full flex flex-col lg:flex-row ">
   <div  class="w-[497px] lg:h-screen flex flex-col justify-between  bg-white  px-[32px] pt-[60px] pb-[28px] shadow-[rgba(0,_0,_0,_0.4)_0px_30px_90px]" >
       <div class="w-full" >
           <img src="../assets/images/manipal.png" alt="">
@@ -25,20 +25,20 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
       </div>
   </div>
   <div
-      class=" h-screen w-screen bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-[#D0828F] via-[#3561AE] to-[#3EBFBA] py-[67px] px-[37px]">
+      class=" h-screen w-screen bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-[#D0828F] via-[#3561AE] to-[#3EBFBA] py-[67px] px-[37px]"> -->
 
       <!-- header -->
-      <div class="">
+      <!-- <div class="">
           <div class="flex justify-between">
               <h3 class="text-[50px] font-semibold text-white">Now Serving</h3>
               <p class="text-[48px] font-semibold text-white">#ManipalHospitalMGRoad</p>
           </div>
       </div>
 
-      <div class="w-full">
+      <div class="w-full"> -->
 
           <!-- card 1 -->
-          <div class="w-[623px] h-[267px] shadow-2xl  rounded-2xl my-[30px] p-[30px] bg-white" >
+          <!-- <div class="w-[623px] h-[267px] shadow-2xl  rounded-2xl my-[30px] p-[30px] bg-white" >
               <div className="w-full">
                   <div class="flex flex-row justify-between">
                       <div class="">
@@ -53,21 +53,21 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                           </div>
 
                       </div>
-                      <div class="w-[32px] h-[27px]">
+                      <div class="w-[32px] h-[27px]"> -->
                           <!-- <img src="/img/twitter.svg" alt=""> -->
-                      </div>
+                      <!-- </div>
                   </div>
                   <div class="pt-[33px]">
                       <p class="text-[21px] font-medium text-zinc-700"></p>
                   </div>
               </div>
-          </div>
+          </div> -->
 
           <!-- card 2 -->
-          <div class="w-full  grid grid-cols-3  overflow-scroll scroll-smooth " id="main">
+          <!-- <div class="w-full  grid grid-cols-3  overflow-scroll scroll-smooth " id="main"> -->
               <!-- card2 -->
               <!-- {{list | json}} -->
-              <div class="w-[425px] h-fit rounded-xl  my-[16px] p-[16px] bg-white"  *ngFor="let item of list; index as i " >
+              <!-- <div class="w-[425px] h-fit rounded-xl  my-[16px] p-[16px] bg-white"  *ngFor="let item of list; index as i " >
                   <div class="flex flex-row justify-between">
                       <div class="">
                           <div class="flex flex-row gap-[11px]">
@@ -87,11 +87,122 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
       <!-- card -->
-
+<!-- 
   </div>
-</div>
-<!-- - <app-tweet></app-twee -->->
+</div> -->
+<!-- - <app-tweet></app-twee -->
 <!-- <router-outlet></router-outlet> -->
+<div class="h-full w-full flex flex-col lg:flex-row ">
+    <div
+        class="w-[497px] lg:h-screen flex flex-col justify-between  bg-white  px-[32px] pt-[60px] pb-[28px] shadow-[rgba(0,_0,_0,_0.4)_0px_30px_90px] z-50">
+        <div class="w-full">
+            <img src="../assets/img/manipal-hospitals.png" alt="">
+        </div>
+        <div class="w-[200px] mx-auto">
+            <img class="w-full" src="../assets/img/manipal-logo.png" alt="">
+        </div>
+        <div class="w-[234px] mx-auto">
+            <img class="w-full" src="../assets/img/manipal2.png" alt="">
+        </div>
+    </div>
+    <div
+        class=" h-screen w-screen bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-[#D0828F] via-[#3561AE] to-[#3EBFBA] py-[67px] px-[37px] ">
+        <!-- header -->
+        <div class="z-40">
+            <div class="flex justify-between">
+                <div class="flex items-center justify-center gap-3">
+                    <h3 class="text-[50px] font-semibold text-white">Now Serving</h3>
+                    <div class="w-[40px] h-[40px] animate-bounce">
+                        <img src="../assets/img/down.png" class="w-full" alt="">
+                    </div>
 
+                </div>
+                <div class="">
+
+                    <p class="text-[48px] font-semibold text-white">#HealingTouches</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-full relative z-10">
+
+            <!-- card 1 -->
+            <div class="w-[623px] h-[267px] bg-white shadow-2xl  rounded-2xl my-[30px] p-[30px] relative z-10"
+                id="card">
+
+
+                <div className="w-full">
+                    <div class="flex flex-row justify-between">
+
+                        <div class="flex flex-row gap-[11px]">
+                            <div class="w-[50px] h-[50px]">
+                                <img class="rounded-full" src="../assets/img/no-img.png" alt="">
+                            </div>
+                            <div class="">
+                                <p class="text-[15px] font-semibold">Friendly bob</p>
+                                <p class="text-[13px] text-zinc-500">@friendly-bob</p>
+                            </div>
+                        </div>
+
+
+                        <div class="w-[32px] h-[27px]">
+                            <img src="../assets/img/twitter.png" alt="">
+                        </div>
+                    </div>
+                    <div class="pt-[33px]">
+                        <p class="text-[21px] font-medium text-zinc-700 overflow-hidden line-clamp-3">
+                            Lorem ipsum
+                            dolor sit
+                            amet
+                            consectetur adipisicing elit. Asperiores reiciendis molestiae ullam doloribus repellat
+                            pariaturawf eafsdgg sgsdv sd sdvsdavdsv sdvsdv sdv sdVsd
+                            consectetur adipisicing elit. Asperiores reiciendis molestiae ullam doloribus repellat
+                            pariaturawf eafsdgg sgsdv sd sdvsdavdsv sdvsdv sdv sdVsd</p>
+                    </div>
+
+
+                </div>
+
+
+
+
+            </div>
+            <span
+                class="animate-ping absolute top-14 rounded-lg -z-10 left-36 inline-flex w-[340px] h-[150px] bg-white opacity-100"></span>
+
+            <!-- card 2 -->
+            <div class="w-full grid grid-cols-3 rounded-2xl" id="card2">
+                <!-- card2 -->
+                <div class="w-[425px] h-[211px] bg-white rounded-xl  my-[16px] p-[16px] pb-4">
+                    <div class="flex flex-row justify-between">
+                        <div class="">
+                            <div class="flex flex-row gap-[11px]">
+                                <div class="w-[50px] h-[47px]">
+                                    <img class="rounded-full" src="/img/no-img.png" alt="">
+                                </div>
+                                <div class="">
+                                    <p class="text-[15px] font-semibold">Friendly bob</p>
+                                    <p class="text-[13px] text-zinc-500">@friendly-bob</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="w-[24px] h-[19px]">
+                            <img class="w-full" src="/img/twitter.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="pt-[23px]">
+                        <p class="text-[16px] font-medium text-zinc-700 line-clamp-3">Lorem ipsum dolor sit amet
+                            consectetur
+                            adipisicing
+                            elit. Asperiores reiciendis molestiae ullam doloribus
+                            repellat pariatur Asperiores reiciendis molestiae ullam doloribus
+                            repellat pariatur</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
