--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,7 +180,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                         <div class="">
                             <div class="flex flex-row gap-[11px]">
                                 <div class="w-[50px] h-[47px]">
-                                    <img class="rounded-full" src="/img/no-img.png" alt="">
+                                    <img class="rounded-full" src="../assets/img/no-img.png" alt="">
                                 </div>
                                 <div class="">
                                     <p class="text-[15px] font-semibold">Friendly bob</p>
