--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,13 +98,13 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
     <div
         class="w-[497px] lg:h-screen flex flex-col justify-between  bg-white  px-[32px] pt-[60px] pb-[28px] shadow-[rgba(0,_0,_0,_0.4)_0px_30px_90px] z-50">
         <div class="w-full">
-            <img src="../assets/img/manipal-hospitals.png" alt="">
+            <!-- <img src="../assets/img/manipal-hospitals.png" alt=""> -->
         </div>
         <div class="w-[200px] mx-auto">
-            <img class="w-full" src="../assets/img/manipal-logo.png" alt="">
+            <!-- <img class="w-full" src="../assets/img/manipal-logo.png" alt=""> -->
         </div>
         <div class="w-[234px] mx-auto">
-            <img class="w-full" src="../assets/img/manipal2.png" alt="">
+            <!-- <img class="w-full" src="../assets/img/manipal2.png" alt=""> -->
         </div>
     </div>
     <div
@@ -140,7 +140,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                             <div class="w-[50px] h-[50px]">
                                 
                                   <!-- <img class="rounded-full" src={{selectedTweet().profilePic}} alt="">  -->
-                                <img class="rounded-full"  src="../assets/images/no-img.png" alt=""> 
+                                <img class="rounded-full"  src="../assets/images/twitter.jpg" alt=""> 
                             </div>
                             <div class="">
                                 <p class="text-[15px] font-semibold">{{selectedTweet().name}}</p>
@@ -150,7 +150,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
 
 
                         <div class="w-[32px] h-[27px]">
-                            <img src="../assets/img/twitter.png" alt="">
+                            <!-- <img src="../assets/img/twitter.png" alt=""> -->
                         </div>
                     </div>
                     <div class="pt-[33px]">
@@ -176,7 +176,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                         <div class="">
                             <div class="flex flex-row gap-[11px]">
                                 <div class="w-[50px] h-[47px]">
-                                    <img class="rounded-full"  src="../assets/images/no-img.png" alt=""> 
+                                    <img class="rounded-full"  src="../assets/img/twitter.png"alt=""> 
                                 </div>
                                 <div class="">
                                     <p class="text-[15px] font-semibold">{{item.name}}</p>
@@ -186,7 +186,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
 
                         </div>
                         <div class="w-[24px] h-[19px]">
-                            <img class="w-full" src="/img/twitter.svg" alt="">
+                            <!-- <img class="w-full" src="/img/twitter.svg" alt=""> -->
                         </div>
                     </div>
                     <div class="pt-[23px]">
