--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,42 +94,42 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
 </div> -->
 <!-- - <app-tweet></app-twee -->
 <!-- <router-outlet></router-outlet> -->
-<div class="h-full w-full flex flex-col lg:flex-row ">
-    <div
+<div class="h-full w-full flex flex-col lg:flex-row" id="main">
+    <!-- <div
         class="w-[497px] lg:h-screen flex flex-col justify-between  bg-white  px-[32px] pt-[60px] pb-[28px] shadow-[rgba(0,_0,_0,_0.4)_0px_30px_90px] z-50">
         <div class="w-full">
-            <!-- <img src="../assets/img/manipal-hospitals.png" alt=""> -->
+            <img src="../assets/img/manipal-hospitals.png" alt="">
         </div>
         <div class="w-[200px] mx-auto">
-            <!-- <img class="w-full" src="../assets/img/manipal-logo.png" alt=""> -->
+            <img class="w-full" src="../assets/img/manipal-logo.png" alt="">
         </div>
         <div class="w-[234px] mx-auto">
-            <!-- <img class="w-full" src="../assets/img/manipal2.png" alt=""> -->
+            <img class="w-full" src="../assets/img/manipal2.png" alt="">
         </div>
-    </div>
+    </div> -->
     <div
-        class=" h-screen w-screen bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-[#D0828F] via-[#3561AE] to-[#3EBFBA] py-[67px] px-[37px] ">
+        class=" h-[70vh] w-s[90%]  py-[280px] px-[150px] " id="sub">
+        <!-- bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-[#D0828F] via-[#3561AE] to-[#3EBFBA] -->
         <!-- header -->
         <div class="z-40">
             <div class="flex justify-between">
                 <div class="flex items-center justify-center gap-3">
-                    <h3 class="text-[50px] font-semibold text-white">Now Serving</h3>
-                    <div class="w-[40px] h-[40px] animate-bounce">
+                    <!-- <h3 class="text-[50px] font-semibold text-white">Now Serving</h3> -->
+                    <!-- <div class="w-[40px] h-[40px] animate-bounce">
                         <img src="../assets/img/down.png" class="w-full" alt="">
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="">
-
-                    <p class="text-[48px] font-semibold text-white">#HealingTouches</p>
+                    <!-- <p class="text-[48px] font-semibold text-white">#HealingTouches</p> -->
                 </div>
             </div>
         </div>
 
-        <div class="w-full relative z-10">
+        <div class="w-full relative z-10 overflow-hidden">
 
             <!-- card 1 -->
-            <div class="w-[623px] h-[267px] bg-white shadow-2xl  rounded-2xl my-[30px] p-[30px] relative z-10"
+            <div class="w-[623px] h-[230px] bg-[#8ed2ff] shadow-2xl  rounded-2xl my-[30px] p-[30px] relative z-10 ml-2"
                 id="card">
 
 
@@ -140,7 +140,7 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                             <div class="w-[50px] h-[50px]">
                                 
                                   <!-- <img class="rounded-full" src={{selectedTweet().profilePic}} alt="">  -->
-                                <img class="rounded-full"  src="../assets/images/twitter.jpg" alt=""> 
+                                <img class="rounded-full"  src="../assets/img/twitter.png" alt=""> 
                             </div>
                             <div class="">
                                 <p class="text-[15px] font-semibold">{{selectedTweet().name}}</p>
@@ -169,14 +169,14 @@ grid-template-rows: repeat(3, 170px);margin-top: 50px;">
                 class="animate-ping absolute top-14 rounded-lg -z-10 left-36 inline-flex w-[340px] h-[150px] bg-white opacity-100"></span>
 
             <!-- card 2 -->
-            <div class="w-full grid grid-cols-3 rounded-2xl" id="card2" >
+            <div class="w-full grid grid-cols-3 rounded-2xl " id="card2" >
                 <!-- card2 -->
-                <div class="w-[425px] h-[211px] bg-white rounded-xl  my-[16px] p-[16px] pb-4" *ngFor="let item of list; index as i " >
+                <div class="w-[400px] h-[211px] rounded-3xl  my-[16px] p-[16px] pb-4 m-2" *ngFor="let item of list; index as i"  [ngClass]="i % 2 === 0 ? 'even-item' : 'odd-item'">
                     <div class="flex flex-row justify-between">
                         <div class="">
                             <div class="flex flex-row gap-[11px]">
                                 <div class="w-[50px] h-[47px]">
-                                    <img class="rounded-full"  src="../assets/img/twitter.png"alt=""> 
+                                    <img class="rounded-full"  src="../assets/images/twitter.jpg"alt=""> 
                                 </div>
                                 <div class="">
                                     <p class="text-[15px] font-semibold">{{item.name}}</p>
